feat: add /users endpoints, add /groups/:group/entities endpoints
Add endpoints to create users, get user details; add, list and remote entities to a group
