# app/controllers/src/shared/types.ts
@@ -1,0 +1,14 @@
+// OpenApi generator does not support the generation of types for extensible enums.
+// These enums should be keep in sync with the enums defined in the OpenAPI spec.
+
+export enum EntityType {
+  HUMAN = "human",
+  SYSTEM = "system"
+}
+
+export enum Role {
+  ADMIN = "admin",
+  APPROVER = "approver",
+  AUDITOR = "auditor",
+  OWNER = "owner"
+}
